// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderBookFooter should render 1`] = `
<DocumentFragment>
  <div
    class="footer"
  >
    <button
      class="button btn btn-primary"
      type="button"
    >
      Toggle feed
    </button>
    <button
      class="button btn btn-danger"
      type="button"
    >
      Kill feed
    </button>
  </div>
</DocumentFragment>
`;

exports[`OrderBookFooter should render 2`] = `
<DocumentFragment>
  <div
    class="footer"
  >
    <button
      class="button btn btn-primary"
      type="button"
    >
      Toggle feed
    </button>
    <button
      class="button btn btn-danger"
      type="button"
    >
      Reconnect
    </button>
  </div>
</DocumentFragment>
`;
